[gd_scene load_steps=46 format=3 uid="uid://b0msrln4lgeup"]

[ext_resource type="Script" path="res://Scenes/Enemies/Ranger/EnemyRanger.gd" id="1_0kdd3"]
[ext_resource type="Texture2D" uid="uid://c5en0wm12dwa4" path="res://Animations/SpriteSheets/RangerSpriteSheet.png" id="2_xbogt"]
[ext_resource type="AudioStream" uid="uid://b2wodtm1kj0j2" path="res://Audio/Sound Effects/Enemies/Ranger/Ranger_Damage.ogg" id="3_b2wmb"]
[ext_resource type="AudioStream" uid="uid://d2nhg7wcwxg8x" path="res://Audio/Sound Effects/Enemies/Ranger/Ranger_Death.ogg" id="4_q4es7"]
[ext_resource type="AudioStream" uid="uid://c4q8d1vdet63j" path="res://Audio/Sound Effects/Enemies/Ranger/Ranger_Move.ogg" id="5_n3o18"]
[ext_resource type="AudioStream" uid="uid://d0vw3tc8v1jx" path="res://Audio/Sound Effects/Enemies/Ranger/Ranger_Shoot.ogg" id="6_iaqa0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s373b"]
radius = 32.0

[sub_resource type="Animation" id="Animation_vkvr6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RangerSpriteSheet:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wdxnj"]
resource_name = "Ranger_Attack_Down"
step = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RangerSpriteSheet:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.8, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33, 34]
}

[sub_resource type="Animation" id="Animation_31ko1"]
resource_name = "Ranger_Attack_Up"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RangerSpriteSheet:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.8, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [35, 36, 37, 38, 39, 40, 41]
}

[sub_resource type="Animation" id="Animation_eh6fs"]
resource_name = "Ranger_Death"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RangerSpriteSheet:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_7c5k4"]
resource_name = "Ranger_Down_Idle"
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RangerSpriteSheet:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.45, 0.8, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_xfcv0"]
resource_name = "Ranger_Move_Down"
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RangerSpriteSheet:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4, 0.55, 0.8, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"call_ranger_move"
}]
}

[sub_resource type="Animation" id="Animation_267n3"]
resource_name = "Ranger_Move_Up"
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RangerSpriteSheet:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4, 0.55, 0.8, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"call_ranger_move"
}]
}

[sub_resource type="Animation" id="Animation_0fhbv"]
resource_name = "Ranger_Up_Idle"
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RangerSpriteSheet:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.45, 0.8, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x0efe"]
_data = {
"RESET": SubResource("Animation_vkvr6"),
"Ranger_Attack_Down": SubResource("Animation_wdxnj"),
"Ranger_Attack_Up": SubResource("Animation_31ko1"),
"Ranger_Death": SubResource("Animation_eh6fs"),
"Ranger_Down_Idle": SubResource("Animation_7c5k4"),
"Ranger_Move_Down": SubResource("Animation_xfcv0"),
"Ranger_Move_Up": SubResource("Animation_267n3"),
"Ranger_Up_Idle": SubResource("Animation_0fhbv")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_la7t8"]
animation = &"Ranger_Attack_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qecgq"]
animation = &"Ranger_Attack_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_akbkh"]
animation = &"Ranger_Attack_Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tv2x2"]
animation = &"Ranger_Attack_Up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_j06c3"]
blend_point_0/node = SubResource("AnimationNodeAnimation_la7t8")
blend_point_0/pos = Vector2(0.3, -0.4)
blend_point_1/node = SubResource("AnimationNodeAnimation_qecgq")
blend_point_1/pos = Vector2(-0.3, -0.4)
blend_point_2/node = SubResource("AnimationNodeAnimation_akbkh")
blend_point_2/pos = Vector2(-0.3, 0.5)
blend_point_3/node = SubResource("AnimationNodeAnimation_tv2x2")
blend_point_3/pos = Vector2(0.3, 0.5)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l2587"]
animation = &"Ranger_Down_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nt6aq"]
animation = &"Ranger_Down_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jfvec"]
animation = &"Ranger_Up_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g0oo2"]
animation = &"Ranger_Up_Idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_t004d"]
blend_point_0/node = SubResource("AnimationNodeAnimation_l2587")
blend_point_0/pos = Vector2(-0.3, 0.4)
blend_point_1/node = SubResource("AnimationNodeAnimation_nt6aq")
blend_point_1/pos = Vector2(0.3, 0.4)
blend_point_2/node = SubResource("AnimationNodeAnimation_jfvec")
blend_point_2/pos = Vector2(-0.3, -0.4)
blend_point_3/node = SubResource("AnimationNodeAnimation_g0oo2")
blend_point_3/pos = Vector2(0.3, -0.4)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ox7rw"]
animation = &"Ranger_Move_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tdeqq"]
animation = &"Ranger_Move_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vdaw0"]
animation = &"Ranger_Move_Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3tuiu"]
animation = &"Ranger_Move_Up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_xe72e"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ox7rw")
blend_point_0/pos = Vector2(-0.3, 0.4)
blend_point_1/node = SubResource("AnimationNodeAnimation_tdeqq")
blend_point_1/pos = Vector2(0.3, 0.4)
blend_point_2/node = SubResource("AnimationNodeAnimation_vdaw0")
blend_point_2/pos = Vector2(-0.3, -0.4)
blend_point_3/node = SubResource("AnimationNodeAnimation_3tuiu")
blend_point_3/pos = Vector2(0.3, -0.4)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7p3gv"]
animation = &"Ranger_Death"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1x3wy"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w0giw"]
priority = 2
advance_mode = 2
advance_condition = &"move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_girga"]
priority = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u0gul"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gtxnh"]
priority = 2
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8p184"]
advance_mode = 2
advance_condition = &"death"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fxdat"]
advance_mode = 2
advance_condition = &"death"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_67tw5"]
advance_mode = 2
advance_condition = &"death"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6l1xs"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_j06c3")
states/Attack/position = Vector2(348, 218)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_t004d")
states/Idle/position = Vector2(348, 100)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_xe72e")
states/Move/position = Vector2(520, 100)
states/Ranger_Death/node = SubResource("AnimationNodeAnimation_7p3gv")
states/Ranger_Death/position = Vector2(520, 218)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_1x3wy"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_w0giw"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_girga"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_u0gul"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_gtxnh"), "Attack", "Ranger_Death", SubResource("AnimationNodeStateMachineTransition_8p184"), "Idle", "Ranger_Death", SubResource("AnimationNodeStateMachineTransition_fxdat"), "Move", "Ranger_Death", SubResource("AnimationNodeStateMachineTransition_67tw5")]
graph_offset = Vector2(-180, 48)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rpdsg"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("3_b2wmb")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wbwmd"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("4_q4es7")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cd61e"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("5_n3o18")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_iscfs"]
streams_count = 1
stream_0/stream = ExtResource("6_iaqa0")

[node name="EnemyRanger" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 256
collision_mask = 291
script = ExtResource("1_0kdd3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
shape = SubResource("CircleShape2D_s373b")

[node name="Timer" type="Timer" parent="."]

[node name="RangerSpriteSheet" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_xbogt")
hframes = 7
vframes = 7

[node name="Ranger_AnimationP" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x0efe")
}

[node name="Ranger_AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_6l1xs")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../Ranger_AnimationP")
parameters/conditions/attack = false
parameters/conditions/death = false
parameters/conditions/idle = false
parameters/conditions/move = false
parameters/Attack/blend_position = Vector2(-0.164816, -0.648936)
parameters/Idle/blend_position = Vector2(-0.308284, 0.43617)
parameters/Move/blend_position = Vector2(0, 0)

[node name="Ranger_Damage" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_rpdsg")
max_polyphony = 3
bus = &"Ranger_SFX"

[node name="Ranger_Death" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_wbwmd")
max_polyphony = 3
bus = &"Ranger_SFX"

[node name="Ranger_Move" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_cd61e")
max_polyphony = 3
bus = &"Ranger_SFX"

[node name="Ranger_Shoot" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_iscfs")
max_polyphony = 5
bus = &"Ranger_SFX"
